--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -47,15 +47,15 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
+                <a href="https://github.com/aapise/DireWolf-Job-Portal" class="portfolio-box">
+                    <img src="img/portfolio/direwolf_logo.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category">
-                                Category
-                            </div>
                             <div class="project-name">
-                                Project Name
+                                DireWolf Job Portal
+                            </div>
+                            <div class="project-category">
+                                Ruby on Rails Web Application
                             </div>
                         </div>
                     </div>
