--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -17,15 +17,15 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
+                <a href="https://github.com/aapise/StoryMaps" class="portfolio-box">
+                    <img src="img/portfolio/storymaps_logo.png" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category">
-                                Category
-                            </div>
                             <div class="project-name">
-                                Project Name
+                                StoryMaps
+                            </div>
+                            <div class="project-category">
+                                Android Mobile Application
                             </div>
                         </div>
                     </div>
@@ -63,7 +63,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/5.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category">
@@ -77,15 +77,15 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
+                <a href="https://github.com/aapise/SAS-Infographics-Toolkit" class="portfolio-box">
+                    <img src="img/portfolio/infographics_logo.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category">
-                                Category
-                            </div>
                             <div class="project-name">
-                                Project Name
+                                SAS Infographics Toolkit
+                            </div>
+                            <div class="project-category">
+                                UX Design Prototype
                             </div>
                         </div>
                     </div>
