minor changes to portfolio

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -7,10 +7,10 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category">
-                                Category
+                                My Motto
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Simple interface, ultimate sophistication.
                             </div>
                         </div>
                     </div>
@@ -37,7 +37,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category">
-                                Category
+                                Favorite Design Principle
                             </div>
                             <div class="project-name">
                                 Project Name
