--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -62,15 +62,15 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
+                <a href="https://github.com/aapise/StudyBuddy" class="portfolio-box">
+                    <img src="img/portfolio/studybuddy_logo.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category">
-                                Category
-                            </div>
                             <div class="project-name">
-                                Project Name
+                                StudyBuddy
+                            </div>
+                            <div class="project-category">
+                                UI/UX Design Prototype
                             </div>
                         </div>
                     </div>
@@ -85,7 +85,7 @@
                                 SAS Infographics Toolkit
                             </div>
                             <div class="project-category">
-                                UX Design Prototype
+                                UI/UX Design & Development
                             </div>
                         </div>
                     </div>
