First Draft Final

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -2,15 +2,15 @@
     <div class="container-fluid">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
+                <a href="https://github.com/aapise/SAS-Infographics-Toolkit" class="portfolio-box">
+                    <img src="img/portfolio/infographics_logo.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category">
-                                My Motto
-                            </div>
                             <div class="project-name">
-                                Simple interface, ultimate sophistication.
+                                SAS Infographics Toolkit
+                            </div>
+                            <div class="project-category">
+                                UI/UX Design & Development
                             </div>
                         </div>
                     </div>
@@ -18,7 +18,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="https://github.com/aapise/StoryMaps" class="portfolio-box">
-                    <img src="img/portfolio/storymaps_logo.JPG" class="img-responsive" alt="">
+                    <img src="img/portfolio/storymaps_logo.JPG" class="img-responsive" alt="" border="20">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
@@ -26,21 +26,6 @@
                             </div>
                             <div class="project-category">
                                 Android Mobile Application
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category">
-                                Favorite Design Principle
-                            </div>
-                            <div class="project-name">
-                                Project Name
                             </div>
                         </div>
                     </div>
@@ -61,6 +46,9 @@
                     </div>
                 </a>
             </div>
+            <div class="col-lg-4 col-sm-6 portfolio-box" >
+                    <img src="img/portfolio/1.png" class="img-responsive" alt="">
+            </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="https://github.com/aapise/StudyBuddy" class="portfolio-box">
                     <img src="img/portfolio/studybuddy_logo.jpg" class="img-responsive" alt="">
@@ -76,20 +64,8 @@
                     </div>
                 </a>
             </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/aapise/SAS-Infographics-Toolkit" class="portfolio-box">
-                    <img src="img/portfolio/infographics_logo.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-name">
-                                SAS Infographics Toolkit
-                            </div>
-                            <div class="project-category">
-                                UI/UX Design & Development
-                            </div>
-                        </div>
-                    </div>
-                </a>
+            <div class="col-lg-4 col-sm-6 portfolio-box" >
+                    <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
             </div>
         </div>
     </div>
