--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -46,7 +46,6 @@ p {
 .bg-primary {
     background-color: white;
 }
-
 .section-heading {
     color: $theme-primary;
 }
@@ -232,6 +231,9 @@ header {
     display: block;
     max-width: 650px;
     margin: 0 auto;
+    border-style: solid;
+    border-width: 5px;
+    border-color: white;
     .portfolio-box-caption {
         color: white;
         opacity: 0;
