Adding MyMovieFinder project

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -25,7 +25,7 @@
                                 StoryMaps
                             </div>
                             <div class="project-category">
-                                Android Mobile Application
+                                Android Mobile Application (Ionic Framework)
                             </div>
                         </div>
                     </div>
@@ -46,8 +46,20 @@
                     </div>
                 </a>
             </div>
-            <div class="col-lg-4 col-sm-6 portfolio-box" >
-                    <img src="img/portfolio/1.png" class="img-responsive" alt="">
+            <div class="col-lg-4 col-sm-6">
+                <a href="https://github.com/aapise/MyMovieFinder" class="portfolio-box">
+                    <img src="img/portfolio/moviefinder.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                My MovieFinder
+                            </div>
+                            <div class="project-category">
+                                Mobile Application (Ionic Framework)
+                            </div>
+                        </div>
+                    </div>
+                </a>
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="https://github.com/aapise/StudyBuddy" class="portfolio-box">
@@ -65,7 +77,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6 portfolio-box" >
-                    <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/1.png" class="img-responsive" alt="">
             </div>
         </div>
     </div>
