--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -55,7 +55,7 @@
                                 My MovieFinder
                             </div>
                             <div class="project-category">
-                                Mobile Application (Ionic Framework)
+                                Android Mobile Application (Ionic Framework)
                             </div>
                         </div>
                     </div>
