changes to header and about section

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="header-content-inner">
             <h1>Hi, I'm Ankita.</h1>
             <hr class = "light">
-            <p>A developer and an occasional designer, I love fun projects and creating pretty things with the magic of code & design. </p>
+            <p>A developer and an occasional designer, I love fun(innovative) projects and creating pretty(useful) things with the magic of code & design. </p>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Get to know me more!</a>
         </div>
     </div>
