updates to the about and contact sections

--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -7,9 +7,9 @@
                 <p class="text-faded"> My name is Ankita Pise and I am a 26-year-old software developer living in San Jose, California. Currently working as a Software Engineer for <a href="https://www.ibm.com/watson/">IBM Watson's</a> Health Imaging group, I am passionate about building software that can have a positive impact on the lives of the people around me.
                     In short, I am constantly striving at spreading happiness around using the power of technology, one piece of well-designed software at a time!</p>
                 <p class="text-faded"> I got my Masters in Computer Science from North Carolina State University. Prior to working for IBM, I worked as a Front-end Engineer at <a href="https://www.pluma.co/">Pluma</a>, and helped develop a mobile application for their executive coaching platform.</p>
-                <p class="text-faded"> Creating seamless, intuitive and dynamic user experiences has always been the focus of my work and it is something I try to apply to every project I take up. 
-                    While I am passionate about front-end design and development, I am also comfortable with full-stack development. You can check out some of my projects <a href="#portfolio">below!</a></p>
-                <p class="text-faded"> I am currently looking for opportunities where I can challenge myself and get to contribute to projects driven by innovation. If you think we could be a good fit, and if you want to work together, then <a href="#contact">hit me up!</a></p>
+                <p class="text-faded"> Creating seamless, intuitive and dynamic user experiences has always been the focus of my work and it is something I strive to achieve in every project I take up. 
+                    While I am passionate about UI/UX design and development, I am very comfortable and love working on full-stack development as well. You can check out some of my projects <a href="#portfolio">below.</a></p>
+                <p class="text-faded"> I am currently looking for opportunities where I can challenge myself and get to contribute to projects driven by innovation. If you think we could be a good fit, and want to build something awesome together, then <a href="#contact">let's talk!</a></p>
                 <a href="#portfolio" class="btn btn-default btn-xl">Check out some of my work!</a>
             </div>
         </div>
