--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,7 +4,7 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Let's Get In Touch!</h2>
                 <hr class="primary">
-                <p class="text-faded">Check out my LinkedIn and Github profiles below. If you would like to get in touch, just email me!</p>
+                <p class="text-faded">Check out my LinkedIn and Github profiles below. If you would like to get in touch, just drop an email!</p>
             </div>
         <div class="col-lg-2 col-lg-offset-2 text-center">
             <a href="https://linkedin.com/in/{{ site.linkedin_username }}">
