--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,6 +21,9 @@
                     <a class="page-scroll" href="#portfolio">Projects</a>
                 </li>
                 <li>
+                    <a class="page-scroll" href="http://aapise.github.io/AnkitaPiseResume/" target="_blank">Resume</a>
+                </li>
+                <li>
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
             </ul>
