Changed the header background and About section

--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -4,7 +4,7 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">About</h2>
                 <hr>
-                <p class="text-faded"> My name is Ankita Pise and I am a 26-year-old software developer living in San Jose, California. Currently working as a Software Engineer for <a href="https://www.ibm.com/watson/">IBM Watson's</a> Health Imaging group, I am passionate about building software that can have a positive impact on the lives of the people around me.
+                <p class="text-faded"> My name is Ankita Pise and I am a 26-year-old software developer living in San Jose, California. Working as a Software Engineer for <a href="https://www.ibm.com/watson/">IBM Watson's</a> Health Imaging group since 2016, I am passionate about building software that can have a positive impact on the lives of the people around me.
                     In short, I am constantly striving at spreading happiness around using the power of technology, one piece of well-designed software at a time!</p>
                 <p class="text-faded"> I got my Masters in Computer Science from North Carolina State University. Prior to working for IBM, I worked as a Front-end Engineer at <a href="https://www.pluma.co/">Pluma</a>, and helped develop a mobile application for their executive coaching platform.</p>
                 <p class="text-faded"> Creating seamless, intuitive and dynamic user experiences has always been the focus of my work and it is something I strive to achieve in every project I take up. 
